syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "location.proto";
import "user.proto";

service InfUsers {
    // Retrieves user data based on an userId
    rpc GetUser(GetUserRequest) returns (GetUserResponse);

    // Updates an existing user object
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

    // Finds users that match search criteria. Note that the server imposes a limit to the
    // number of results it will return.
    rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse) {}
}

message GetUserRequest {
    string userId = 1;
}

message GetUserResponse {
    UserDto userData = 1;
}

message UpdateUserRequest {
    UserDto user = 1;
}

message UpdateUserResponse {
    UserDto user = 1;
}

message SearchUsersRequest {
    repeated UserType userTypes = 1;
    repeated int32 categoryIds = 2;
    repeated int32 socialMediaNetworkIds = 3;
    LocationDto location = 4;
    double locationDistanceKms = 5;
    // TODO: what is the unit here? Cents?
    int32 minimumValue = 6;
    string phrase = 7;
}

message SearchUsersResponse {
    repeated UserDto results = 1;
}